fix pagination posts flex gap

--- a/assets/sass/_theme/design-system/pagination.sass
+++ b/assets/sass/_theme/design-system/pagination.sass
@@ -67,7 +67,7 @@
     @include media-breakpoint-up(desktop)
         ul
             padding-top: $spacing1
-            .next:first-child
+            gap: $spacing1
 
     @include media-breakpoint-down(desktop)
         ul
